# src/api/OpenAPI.json
@@ -176,7 +176,14 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/BaseResponseLong"
+                }
+              }
+            }
           }
         }
       }
@@ -267,6 +274,38 @@
         }
       }
     },
+    "/user/listLike": {
+      "get": {
+        "tags": [
+          "用户接口"
+        ],
+        "summary": "主页用户推荐",
+        "operationId": "userListLike",
+        "parameters": [
+          {
+            "name": "count",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/BaseResponseListUser"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/user/current": {
       "get": {
         "tags": [
@@ -296,55 +335,70 @@
         "properties": {
           "id": {
             "type": "integer",
-            "format": "int64"
+            "format": "int64",
+            "refType": null
           },
           "userName": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           },
           "userAccount": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           },
           "avatarUrl": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           },
           "gender": {
             "type": "integer",
-            "format": "int32"
+            "format": "int32",
+            "refType": null
           },
           "tags": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           },
           "userPassword": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           },
           "phone": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           },
           "email": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           },
           "userStatus": {
             "type": "integer",
-            "format": "int32"
+            "format": "int32",
+            "refType": null
           },
           "createTime": {
             "type": "string",
-            "format": "date-time"
+            "format": "date-time",
+            "refType": null
           },
           "updateTime": {
             "type": "string",
-            "format": "date-time"
+            "format": "date-time",
+            "refType": null
           },
           "isdelete": {
             "type": "integer",
-            "format": "int32"
+            "format": "int32",
+            "refType": null
           },
           "userRole": {
             "type": "integer",
-            "format": "int32"
+            "format": "int32",
+            "refType": null
           },
           "profile": {
-            "type": "string"
+            "type": "string",
+            "refType": null
           }
         }
       },
